# manille-master

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: action.rs  action_collection.rs  action_list.rs  array.rs  bench.rs  bits.rs  card.rs  game.rs  game_phase.rs  game_state.rs  human_player.rs  inference.rs  main.rs  player.rs  random_player.rs  round.rs  sprt.rs  stack.rs  suit.rs  suite.rs  tournament.rs  trick.rs
src/io/: arg_handler.rs  debugger.rs  input.rs  mod.rs
src/mcts/: action_list.rs  edge.rs  mod.rs  node.rs  searcher.rs  state.rs  tree.rs
src/nn/: logger.rs  mod.rs  train.rs
src/players/: greedy_player.rs  human_player.rs  mcts_player.rs  mod.rs  random_player.rs
src/ui/: app.rs  hand.rs  mod.rs  moving_card.rs  ui_card.rs  ui_game.rs
