[package]
name = "manille-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bmi2 = []
debug = []

[dependencies]
ismcts = "0.3.0"
rand = "0.9.0"
romu = "0.6.0"

eframe = { version = "0.31.1", default-features = false, features = ["x11", "glow", "default_fonts"] }
egui_extras = { version = "0.31.1", default-features = false, features = ["image"] }

[profile.release]
debug = true
overflow-checks = false
