[package]
name = "manille-master"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bmi2 = []
debug = []

[dependencies]
ismcts = "0.3.3"
rand = "0.9.0"
romu = "0.6.0"
macroquad = "0.4.14"
rust-embed = "8.7.2"

[profile.release]
overflow-checks = false
